updated navbar to hide 'top' when at the top of the page

--- a/styles/css/main1.css
+++ b/styles/css/main1.css
@@ -121,7 +121,9 @@ a:focus {
 .light {
     font-weight: 400;
 }
-
+.hidden {
+    display: none;
+}
 .navbar {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
