updating repo image

--- a/styles/css/main1.css
+++ b/styles/css/main1.css
@@ -371,7 +371,7 @@ section#contact {
     width: 100%;
     padding: 50px 0;
     color: #fff;
-    background: url(http://goo.gl/NwYozX) no-repeat center fixed;
+    background: url(../img/smart_lightbulb.jpg) no-repeat center fixed;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
