testing new fonts for windows compatibility

--- a/styles/css/main1.css
+++ b/styles/css/main1.css
@@ -20,7 +20,7 @@ h5,
 h6 {
     margin: 0 0 35px;
     text-transform: uppercase;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Myriad Set Pro","Lucida Grande","Helvetica Neue","Helvetica","Arial","Verdana","sans-serif";
     font-weight: 100;
     letter-spacing: 1px;
 }
