--- a/styles/css/main1.css
+++ b/styles/css/main1.css
@@ -1,7 +1,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Lato, "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 100;
     color: #fff;
     background-color: #000;
@@ -20,7 +20,7 @@ h5,
 h6 {
     margin: 0 0 35px;
     text-transform: uppercase;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Raleway, "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 100;
     letter-spacing: 1px;
 }
